--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -1,6 +1,6 @@
 /* Footer */
 .footer {
-    background-color: $primary-color;
+    background-color: $secondary-color;
     
     &__wrapper {
         max-width: $small-desktop-width;
