--- a/src/components/styles/partials/_projects.scss
+++ b/src/components/styles/partials/_projects.scss
@@ -1,7 +1,7 @@
 // Projects Page Styles
 
 .projects {
-    background-color: $section-bg;
+    background-color: $light-bg;
     
     &__wrapper {
         margin: 0 auto;
@@ -24,31 +24,8 @@
         margin: 0 auto 32px;
         max-width: 264px;
         justify-content: space-between;
-    }
 
-    &__chip {
-        background-color: $chips-bg;
-        border-radius: 50px;
-        padding: 4px 16px;
-        min-width: 120px;
-        @extend .chips;
-        cursor: pointer;
-        text-align: center;
-        
-        &:hover {
-            background-color: $primary-color;
-            color: $white;
+        @include laptop {
+            margin-bottom: 64px;
         }
-    }
-
-    &__chip--active {
-        border-radius: 50px;
-        padding: 4px 16px;
-        min-width: 120px;
-        @extend .chips;
-        cursor: pointer;
-        text-align: center;
-        background-color: $primary-color;
-        color: $white;
-    }
-}
+    }}
