--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -8,19 +8,17 @@ $small-desktop-width: 1280px;
 $large-desktop-width: 1920px;
 
 // Color palette
-$primary-color: #6667AB;
-$primary-light: #a5a6ce;
+$primary-color: #e087fb;
+$secondary-color: #217f04;
 $white: #ffffff;
 $light-bg: #f2f2f2;
 $gray: #808080;
 $dark-gray: #595959;
 $black: #000000;
 $dark: #222222;
-$design: #f8c828;
-$design-light: #fbe087;
-$development: #5eb36c;
-$development-light: #a1d2a9;
-$chips-bg: #EFEFEF;
-$section-bg: #fafafa;
+$design: #fbe087;
+$design-light: #fef9e6;
+$development: #87a2fb;
+$development-light: #e6ecfe;
 $box-shadow: rgba(0, 0, 0, 0.12);
 $box-shadow-dark: rgba(0, 0, 0, 0.25);
