--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -52,3 +52,8 @@
     font-family: "Source Sans Bold";
     src: url("../../assets/fonts/sourcesanspro-bold.ttf");
 }
+
+@font-face {
+    font-family: "BC Alphapipe L Regular";
+    src: url("../../assets/fonts/bc-alphapipe-l-regular.ttf");
+}
