--- a/src/components/styles/partials/_featured.scss
+++ b/src/components/styles/partials/_featured.scss
@@ -1,7 +1,7 @@
 // Featured Section Styles
 
 .featured {
-    // background-color: $section-bg;
+    background-color: $light-bg;
 
     &__wrapper {
         margin: 0 auto;
