--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -57,3 +57,8 @@
     font-family: "BC Alphapipe L Regular";
     src: url("../../assets/fonts/bc-alphapipe-l-regular.ttf");
 }
+
+@font-face {
+    font-family: "BC Alphapipe RB Bold";
+    src: url("../../assets/fonts/bc-alphapipe-rb-bold.ttf");
+}
