--- a/src/components/styles/partials/_card.scss
+++ b/src/components/styles/partials/_card.scss
@@ -60,8 +60,8 @@
     }
 
     &__tool-icon {
-        height: 32px;
-        width: auto;
+        height: auto;
+        width: 32px;
         margin: 24px 8px 0 0;
     }
 }
