--- a/src/components/styles/partials/_fonts.scss
+++ b/src/components/styles/partials/_fonts.scss
@@ -5,6 +5,7 @@ $regular: "Source Sans Regular";
 $bold: "Source Sans Bold";
 $kalam: "Kalam Bold";
 $alphapipe: "BC Alphapipe L Regular";
+$alphapipe-bold: "BC Alphapipe RB Bold";
 
 // Text Styles
 
