--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -18,7 +18,9 @@ $black: #000000;
 $dark: #222222;
 $design: #fbe087;
 $design-light: #fef9e6;
+$design-chip: #fce59a;
 $development: #87a2fb;
 $development-light: #e6ecfe;
+$development-chip: #c0cefd;
 $box-shadow: rgba(0, 0, 0, 0.12);
 $box-shadow-dark: rgba(0, 0, 0, 0.25);
